--- a/test/browser/test-1.html
+++ b/test/browser/test-1.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <style>
-      canvas {
-        border: 1px solid #efefef;
-        margin: 1rem;
-      }
+        html, body{
+            padding: 0;
+            margin: 0;
+        }
+
+        canvas {
+            display: block;
+            width: 100vw;
+            height: 100vh;
+        }
     </style>
 </head>
 <body>
 
   <script src="../../dist/mz-particles.min.js"></script>
   <script>
-      window.particles();
+      window.particles({
+          canvasWidth: '100vw',
+          canvasHeight: '100vh',
+          particlesNumber: 40,
+      });
   </script>
 </body>
 </html>
