fix typescript issues

--- a/test/browser/circles.html
+++ b/test/browser/circles.html
@@ -20,11 +20,11 @@
 
   <script src="../../dist/mz-particles.min.js"></script>
   <script>
-      window.particles({
+      document.body.append(window.particles({
           canvasWidth: '100vw',
           canvasHeight: '100vh',
           particlesNumber: 100,
-      });
+      }));
   </script>
 </body>
 </html>
