congifure particles color

--- a/test/browser/stars.html
+++ b/test/browser/stars.html
@@ -25,9 +25,14 @@
           canvasHeight: '100vh',
           particlesNumber: 100,
 
+          particlesColors: [
+              '#CEA262', '#f3a73a', '#fffc00', '#92ccfa',
+              '#5daed2', '#366d8c'
+          ],
+
           // star -------------
           rotate: true,
-          svgPath: 'm14.5 21.75-8.52289 4.48075 1.62773-9.49038-6.89516-6.72112 9.52888-1.38462L14.5 0l4.26144 8.63463 9.52888 1.38462-6.89516 6.72112 1.62773 9.49038z',
+          svgPathData: 'm14.5 21.75-8.52289 4.48075 1.62773-9.49038-6.89516-6.72112 9.52888-1.38462L14.5 0l4.26144 8.63463 9.52888 1.38462-6.89516 6.72112 1.62773 9.49038z',
       });
 
       document.body.append($canvas);
