scale svg path according to the randomly selected size

--- a/test/browser/stars.html
+++ b/test/browser/stars.html
@@ -25,6 +25,9 @@
           canvasHeight: '100vh',
           particlesNumber: 100,
 
+          minSize: 10,
+          maxSize: 30,
+
           particlesColors: [
               '#CEA262', '#f3a73a', '#fffc00', '#92ccfa',
               '#5daed2', '#366d8c'
