--- a/test/browser/circles.html
+++ b/test/browser/circles.html
@@ -23,6 +23,7 @@
       document.body.append(window.particles({
           canvasWidth: '100vw',
           canvasHeight: '100vh',
+          canvasColor: 'rgb(17, 24, 39)',
           particlesNumber: 100,
       }));
   </script>
