--- a/test/browser/triangles.html
+++ b/test/browser/triangles.html
@@ -23,6 +23,7 @@
       const $canvas = window.particles({
           canvasWidth: '100vw',
           canvasHeight: '100vh',
+          canvasColor: 'rgb(17, 24, 39)',
           particlesNumber: 100,
 
           minSize: 10,
