--- a/examples/stars-scale.html
+++ b/examples/stars-scale.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-  <script src="../../dist/mz-particles.min.js"></script>
+  <script src="../dist/mz-particles.min.js"></script>
   <script>
       const $canvas = window.particles({
           canvasWidth: '100vw',
