--- a/examples/circles.html
+++ b/examples/circles.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-  <script src="../../dist/mz-particles.min.js"></script>
+  <script src="../dist/mz-particles.min.js"></script>
   <script>
       document.body.append(window.particles({
           canvasWidth: '100vw',
