--- a/examples/circles-scale-fade.html
+++ b/examples/circles-scale-fade.html
@@ -9,20 +9,18 @@
             margin: 0;
         }
 
-        canvas {
-            display: block;
+        #placeholder{
             width: 100vw;
             height: 100vh;
         }
     </style>
 </head>
 <body>
-
+  <div id="placeholder"></div>
   <script src="../dist/mz-particles.min.js"></script>
   <script>
-      document.body.append(window.particles({
-          canvasWidth: '100vw',
-          canvasHeight: '100vh',
+      window.particles({
+          $placeholder: document.getElementById('placeholder'),
 
           canvasColor: 'rgb(17, 24, 39)',
           particlesNumber: 100,
@@ -40,7 +38,7 @@
 
           // fade in/out effect
           fadeInOut: true,
-      }));
+      })
   </script>
 </body>
 </html>
