--- a/examples/no-bg-color.html
+++ b/examples/no-bg-color.html
@@ -9,20 +9,18 @@
             margin: 0;
         }
 
-        canvas {
-            display: block;
+        #placeholder{
             width: 100vw;
             height: 100vh;
         }
     </style>
 </head>
 <body>
-
+  <div id="placeholder"></div>
   <script src="../dist/mz-particles.min.js"></script>
   <script>
-      const $canvas = window.particles({
-          canvasWidth: '100vw',
-          canvasHeight: '100vh',
+      window.particles({
+          $placeholder: document.getElementById('placeholder'),
           particlesNumber: 100,
 
           minSize: 10,
@@ -49,8 +47,6 @@
           minScale: 0.7,
           scaleStep: 0.005,
       });
-
-      document.body.append($canvas);
   </script>
 </body>
 </html>
