--- a/examples/position-absolute.html
+++ b/examples/position-absolute.html
@@ -7,16 +7,26 @@
         html, body{
             padding: 0;
             margin: 0;
-        }
-
-        #placeholder{
+            position: relative;
+            display: flex;
+            flex-direction: column;
             width: 100vw;
             height: 100vh;
+        }
+
+        #placeholder {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
+
   <div id="placeholder"></div>
+
   <script src="../dist/mz-particles.min.js"></script>
   <script>
       window.particles({
