connectiong line size with different breakpoints

--- a/examples/stars-scale-fade.html
+++ b/examples/stars-scale-fade.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test</title>
     <style>
         html, body{
@@ -23,6 +24,9 @@
           $placeholder: document.getElementById('placeholder'),
           canvasColor: 'rgb(17, 24, 39)',
           particlesNumber: 100,
+
+          connectionColor: 'rgb(112,125,154)',
+          maxConnectionSize: 0.1,
 
           minSize: 10,
           maxSize: 30,
